Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5106

Fix various Lua library and compiler issues

    XMLWordPrintableJSON

Details

    Description

      • The Lua generator can emit empty typedefs, resulting in Lua syntax errors.
      • TCompactProtocol: int64 fields are read incorrectly due to sign errors.
      • TCompactProtocol: empty map fields are read incorrectly due to a bad size check.

      Attachments

        Issue Links

          Activity

            People

              jeffreyhan Jeffrey Han
              jeffreyhan Jeffrey Han
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m