THRIFT-5106: Fix various Lua library and compiler issues Client: lua Patch: Jeffrey Han

This closes #2014